Feature 69 spo gov votes notifications (#71)
* work in progress

Signed-off-by: Alessio <slux83@gmail.com>

* initial implementation of pool votes notification system. Nedes to be tested

Signed-off-by: Alessio <slux83@gmail.com>

* tested at runtime (no votes yet)

Signed-off-by: Alessio <slux83@gmail.com>

* Added integration tests

Signed-off-by: Alessio <slux83@gmail.com>

* Completed tests

Signed-off-by: Alessio <slux83@gmail.com>

---------

Signed-off-by: Alessio <slux83@gmail.com>
Co-authored-by: Alessio <slux83@gmail.com>